--- a/myf/public/index.html
+++ b/myf/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.js" integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/5a03971d92.js" crossorigin="anonymous"></script>
     <script text="text/javascript" src="/js/articleProgress.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
