Now can toggle comments

--- a/myf/public/index.html
+++ b/myf/public/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.js" integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
+    <!-- Font-Awesome glyphicons -->
     <script src="https://kit.fontawesome.com/5a03971d92.js" crossorigin="anonymous"></script>
+    <!-- progressbar MH -->
     <script text="text/javascript" src="/js/articleProgress.js"></script>
+    <!-- commentCtrl MH -->
+    <script text="text/javascript" src="/js/commentControl.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
