--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,7 @@
     <!-- progressbar MH -->
     <script text="text/javascript" src="/js/articleProgress.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <base href="/" />
   </head>
   <body>
     <noscript>
